<resources>
    <string name="app_name">My MiXiT</string>
    <string name="account_type" translatable="false">org.mixitconf</string>
    <string name="account_label" translatable="false">MiXiT conf</string>

    <string name="title_fragment_home">My MiXiT</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="title_fragment_about">About</string>
    <string name="title_fragment_talks">Talks</string>
    <string name="title_fragment_favorites">Favorites</string>
    <string name="title_fragment_onair">MiXiT on air</string>
    <string name="title_fragment_speakers">Speakers</string>
    <string name="title_twitter_link">Our news on Twitter</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Event dates -->
    <string name="event_welcome">The conference from Lyon with crêpes and love</string>
    <string name="event_dates">13th &amp; 14th April 2023</string>

    <string name="event_day1">Thursday 13th May</string>
    <string name="event_day2">Friday 14th May</string>
    <string name="event_day3">Thursday 26th May</string>
    <string name="language_en">En</string>

    <!-- Talk format enum labels -->
    <string name="talk_format_closing_session">Closing session</string>
    <string name="talk_format_keynote">Keynote</string>
    <string name="talk_format_keynote_surprise">Surprise keynote</string>
    <string name="talk_format_lightningtak">Lightning talk</string>
    <string name="talk_format_random">Talk</string>
    <string name="talk_format_talk">Talk</string>
    <string name="talk_format_interview">On air</string>
    <string name="talk_format_workshop">Workshop</string>
    <string name="talk_format_planning_reception">Reception (breakfast)</string>
    <string name="talk_format_planning_introduction_session">Session introduction by speakers</string>
    <string name="talk_format_planning_pause_10" translatable="false">Pause (10 min)</string>
    <string name="talk_format_planning_pause_25" translatable="false">Pause (25 min)</string>
    <string name="talk_format_planning_pause_30" translatable="false">Pause (30 min)</string>
    <string name="talk_format_planning_party" translatable="false">MiXiT Party</string>
    <string name="talk_format_planning_lunch">Lunch</string>
    <string name="talk_format_planning_orha_speech">Team introduction</string>
    <string name="talk_format_planning_day">Day</string>

    <!-- Room enum labels -->
    <string name="room_amphi1">Lovelace Amphitheatre</string>
    <string name="room_amphi2">Hamilton Amphitheatre</string>
    <string name="room_amphic">C Amphitheatre</string>
    <string name="room_amphid">D Amphitheatre</string>
    <string name="room_amphik">K Amphitheatre</string>
    <string name="room1">Gosling Room (S102)</string>
    <string name="room2">Kare Room (S103)</string>
    <string name="room3">Nonaka Room (S104)</string>
    <string name="room4">Dijkstra Room (S105)</string>
    <string name="room5">Turing Room (S106)</string>
    <string name="room6">Lovelace Room (S108)</string>
    <string name="room7">Hamilton Room (S107)</string>
    <string name="room8" translatable="false">Salon des symboles</string>
    <string name="room_outside">Outside in the playground</string>
    <string name="room_mummy">Milky Way room (S110)</string>
    <string name="room_speaker" translatable="false">Salle du conseil</string>
    <string name="room_unknown">Unknown room</string>
    <string name="room_surprise">Surprise...</string>

    <!-- Login page -->
    <string name="prompt_email">Email</string>
    <string name="prompt_token">Token</string>
    <string name="prompt_reset_token">I forgot my token</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_email">Not a valid email.</string>
    <string name="error_invalid_token" translatable="false">Token must contain only alphanumerics and must be >10 characters.</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_no_internet">Retry later because your Internet connection is not available.</string>
    <string name="error_no_internet_permission">To use Data synchronization you must give the rights to this application to go on the Internet</string>
    <string name="error_forbidden">This action is forbidden.</string>
    <string name="error_invalid_credential">Token is invalid.</string>
    <string name="error_unknown_email">No account is associated to this email address. Use MiXiT conf website to create your account</string>
    <string name="error_sync_data">Data are not synchronized. Try again later. If problem persists please contact us to contact@mix-it.fr</string>

    <string name="info_sent_token" translatable="false">A token was send by email. Please check your mailbox and retry a connection with its token</string>
    <string name="info_sync_data">Data are synchronized</string>
    <string name="info_sync_start">Data sync is launched in background…</string>

    <!-- Settings page -->
    <string name="settings_notification_title">Notification</string>
    <string name="settings_notification">Talk notification</string>
    <string name="settings_notification_summary_on">You will receive a notification just before a conference defined as favorite will be start</string>
    <string name="settings_notification_summary_off">You won\'t receive a notification just before a conference defined as favorite will be start</string>

    <string name="settings_sync_title">Sync</string>
    <string name="settings_sync_data">Sync talks and speakers</string>
    <string name="settings_sync_data_summary_on">Talks and speakers will be automatically synchronized  with MiXiT website</string>
    <string name="settings_sync_data_summary_off">Sync is disabled and you have to use the refresh button to sync talks and speakers with MiXiT website</string>
    <string name="settings_sync_favorites">Sync favorites</string>
    <string name="settings_sync_favorites_summary_on">Favorites defined in this app will be synchronized with MiXiT website. For this feature you need to sign in with your account email.</string>
    <string name="settings_sync_favorites_summary_off">We only synchronize speakers and talks with our website, and your favorites are only defined on this Android app</string>

    <string name="settings_about_title">About</string>
    <string name="settings_about_mixit">About MiXiT</string>
    <string name="settings_about_app">About this app</string>

    <!-- About page -->
    <string name="settings_about_text">My MiXiT app is here to help you to get the most out of your conference the D day</string>
    <string name="settings_about_version" translatable="false">Version %s - MiXiT</string>


    <!-- Talk screen -->
    <string name="talk_time_range">"%1$s from %2$s to %3$s "</string>
    <string name="talk_topic">Topic</string>
    <string name="talk_language">Language</string>
    <string name="talk_language_en">English</string>
    <string name="talk_language_fr">French</string>
    <string name="talk_favorite">Marked as favorite</string>
    <string name="talk_room_detail" translatable="false">%s (cap. %s)</string>
    <string name="title_synchronize">Synchronize data</string>

    <!-- Favorite screen -->
    <string name="favorite_empty">You have no favorite conference. To mark a conference as favorite use the heart button on detail talk screen.</string>

    <!-- Notiffication channels -->
    <string name="planning_notification_channel_id" translatable="false">planning_notification_channel</string>
    <string name="planning_notification_channel_name" translatable="false">channame</string>
    <string name="planning_notification_channel_description" translatable="false">chandes</string>
    <string name="sync_notification_channel_id" translatable="false">syncchanid</string>
    <string name="sync_notification_channel_name" translatable="false">syncchan name</string>
    <string name="sync_notification_channel_description" translatable="false">sync desc</string>

    <string name="new_ticket_comment_notification_channel_id" translatable="false">new_ticket_comment_notification_channel</string>
    <string name="new_ticket_comment_notification_channel_name" translatable="false">Support tickets</string>
    <string name="new_ticket_comment_notification_channel_description" translatable="false">Push notifications for ticket updates</string>
    <string name="fairphone_notification_channel_id" translatable="false">fairphone_notifications</string>
    <string name="fairphone_notification_channel_name" translatable="false">Fairphone</string>

    <string name="planning_notification_description">This talk will start in few minutes in room %s</string>
    <string name="talk_format_planning_pause_20">(Pause 20 min)</string>
    <string name="talk_format_planning_introduction_mixette">Présentation des associations Mixette</string>
</resources>