<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_sync_title">

        <SwitchPreferenceCompat
            app:key="sync_data"
            app:summaryOff="@string/settings_sync_data_summary_off"
            app:summaryOn="@string/settings_sync_data_summary_on"
            app:title="@string/settings_sync_data" />

        <SwitchPreferenceCompat
            app:key="sync_favorites"
            app:summaryOff="@string/settings_sync_favorites_summary_off"
            app:summaryOn="@string/settings_sync_favorites_summary_on"
            app:title="@string/settings_sync_favorites" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_notification_title">

        <SwitchPreferenceCompat
            app:key="talk_notification"
            app:summaryOff="@string/settings_notification_summary_off"
            app:summaryOn="@string/settings_notification_summary_on"
            app:title="@string/settings_notification" />

    </PreferenceCategory>

    <PreferenceCategory app:title="about_title">
        <Preference
            android:key="about_app_mixit"
            android:title="@string/settings_about_mixit"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

        <Preference
            android:key="about_app"
            android:title="@string/settings_about_app"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />
    </PreferenceCategory>
</PreferenceScreen>