<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".HomeActivity">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/mxt_icon_home"
        android:title="@string/app_name"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/navigation_twitter"
            android:icon="@drawable/mxt_icon_twitter_zoom"
            android:title="@string/title_twitter_link"
            app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_synchronize"
        android:title="@string/title_synchronize"
        app:showAsAction="withText"/>

    <item
            android:id="@+id/navigation_settings"
            android:title="@string/title_fragment_settings"
            app:showAsAction="withText"/>

</menu>
