<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.mixitconf.ui.home.MainFragment"
        android:label="@string/title_fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_talksFragment"
            app:destination="@id/navigation_talks" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.mixitconf.ui.settings.SettingsFragment"
        android:label="@string/title_fragment_settings">

        <action
            android:id="@+id/action_open_about"
            app:destination="@id/navigation_about"
            app:popUpTo="@+id/navigation_settings"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="org.mixitconf.ui.settings.AboutFragment"
        android:label="@string/title_fragment_about" />


    <action
        android:id="@+id/action_settingsFragment"
        app:destination="@id/navigation_settings" />


    <fragment
        android:id="@+id/navigation_talks"
        android:name="org.mixitconf.ui.talk.TalksFragment"
        android:label="@string/title_fragment_talks" >
    </fragment>

    <action
        android:id="@+id/action_talksFragment_to_talkDetailFragment"
        app:destination="@id/navigation_talk_detail" >
        <argument android:name="talkId" app:argType="long"/>
    </action>

    <fragment
        android:id="@+id/navigation_talk_detail"
        android:name="org.mixitconf.ui.talk.TalkDetailFragment"
        android:label="@string/title_fragment_talks">
        <argument
            android:name="talkId"
            app:argType="long" />
    </fragment>

    <action
        android:id="@+id/action_speakersFragment_to_speakerDetailFragment"
        app:destination="@id/navigation_speaker_detail" >
        <argument android:name="login" app:argType="string"/>
    </action>

    <fragment
        android:id="@+id/navigation_speaker_detail"
        android:name="org.mixitconf.ui.speaker.SpeakerDetailFragment"
        android:label="@string/title_fragment_speakers">
        <argument
            android:name="login"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_speakers"
        android:name="org.mixitconf.ui.speaker.SpeakersFragment"
        android:label="@string/title_fragment_speakers"
        tools:layout="@layout/fragment_speakers" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="org.mixitconf.ui.talk.FavoritesTalksFragment"
        android:label="@string/title_fragment_favorites"
        tools:layout="@layout/fragment_talks" />

</navigation>