<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/talk_detail_container_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.talk.TalkDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_talk_language_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="2dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:text="@string/talk_language"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_description" />

        <TextView
            android:id="@+id/tv_talk_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_talk_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_summary" />

        <TextView
            android:id="@+id/tv_talk_speaker_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="2dp"
            android:paddingTop="0dp"
            android:textColor="@color/colorPrimary"
            android:paddingEnd="0dp"
            android:text="@string/title_fragment_speakers"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_language" />

        <TextView
            android:id="@+id/tv_talk_topic_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="2dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/talk_topic"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_talk_speakers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_talk_speakers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_speaker_section" />

        <ImageView
            android:id="@+id/img_talk_topic"
            android:layout_width="@dimen/image_list_size"
            android:layout_height="@dimen/image_list_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/title_fragment_talks"
            android:textColor="@color/textShadow"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_topic_section" />

        <TextView
            android:id="@+id/tv_talk_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:paddingStart="2dp"
            android:paddingTop="4dp"
            android:paddingEnd="2dp"
            android:paddingBottom="4dp"
            android:textColor="@color/textShadow"
            android:text="@string/talk_topic"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_talk_topic" />

        <TextView
            android:id="@+id/tv_talk_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="2dp"
            android:textColor="@color/textShadow"
            android:paddingEnd="2dp"
            android:text="@string/talk_language_fr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_language_section" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>